--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 flask==3.0.0
+flask-cors==4.0.0
 gunicorn==21.2.0
 torch
 torchaudio
@@ -7,7 +8,15 @@ numpy
 scipy
 requests
 
+# Authentic Orpheus TTS Dependencies
+orpheus-speech
+snac
+# transformers - Optional, disabled due to Windows DLL issues
+# accelerate - Optional, disabled due to Windows DLL issues
+
 # Voice Interface Dependencies
 SpeechRecognition==3.10.0
 pygame==2.5.2
 pyaudio==0.2.11
+edge-tts==6.1.9
+gTTS==2.4.0
