feat: Implement Windows-compatible Orpheus TTS with Hugging Face transformers
- Added `orpheus_windows_compatible.py` for Windows TTS functionality using Hugging Face models.
- Updated `requirements.txt` to include necessary dependencies for TTS and audio processing.
- Created `voice_integration_lite.py` for lightweight voice integration with Edge TTS fallback.
- Developed `status_check.py` to verify system status and dependencies.
- Added `test_audio.py` for testing audio generation functionality.
- Implemented `test_integration.py` to validate OpenVoice integration and personality synthesis.
- Created `test_lite.py` for testing lightweight voice integration and speech synthesis.
- Developed `test_openvoice.py` to test OpenVoice integration and emotion processing.
- Added `working_test.py` to perform a simple working test of Edge TTS and integration system.

--- a/orpheus-voice-chat/deploy/Dockerfile
+++ b/orpheus-voice-chat/deploy/Dockerfile
@@ -1,37 +1,64 @@
-# Use Python 3.10 slim image for better compatibility
-FROM python:3.10-slim
+# Multi-stage Dockerfile for Orpheus Voice Chat - Cloud Run Optimized
+FROM python:3.11-slim as builder
 
-# Install system dependencies
+# Install system dependencies for audio processing
 RUN apt-get update && apt-get install -y \
-    ffmpeg \
-    git \
     build-essential \
+    portaudio19-dev \
+    python3-pyaudio \
+    espeak \
+    espeak-data \
+    libespeak1 \
+    libespeak-dev \
+    festival \
+    festvox-kallpc16k \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
 WORKDIR /app
 
-# Copy requirements first for better Docker layer caching
-COPY deploy/requirements-production.txt ./requirements.txt
-
-# Install Python dependencies
-RUN pip install --no-cache-dir --upgrade pip
+# Copy requirements and install Python dependencies
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY src/ ./src/
-COPY deploy/ ./deploy/
+# Production stage
+FROM python:3.11-slim
 
-# Create a non-root user for security
-RUN useradd --create-home --shell /bin/bash app \
-    && chown -R app:app /app
-USER app
+# Install runtime dependencies
+RUN apt-get update && apt-get install -y \
+    portaudio19-dev \
+    espeak \
+    espeak-data \
+    libespeak1 \
+    festival \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Set working directory
+WORKDIR /app
+
+# Copy installed packages from builder
+COPY --from=builder /usr/local/lib/python3.11/site-packages/ /usr/local/lib/python3.11/site-packages/
+COPY --from=builder /usr/local/bin/ /usr/local/bin/
+
+# Copy application code
+COPY src/app_live_orpheus.py app_live_orpheus.py
+
+# Create necessary directories
+RUN mkdir -p /tmp/audio
+
+# Set environment variables
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONPATH=/app
+ENV PORT=5000
 
 # Expose port
-EXPOSE 8080
+EXPOSE 5000
 
-# Set Python path to include src directory
-ENV PYTHONPATH=/app/src
+# Health check
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:5000/ || exit 1
 
-# Use gunicorn for production deployment
-CMD ["gunicorn", "--bind", "0.0.0.0:8080", "--workers", "1", "--timeout", "120", "--preload", "src.app:app"]
+# Run the application
+CMD ["python", "app_live_orpheus.py"]
