🗑️ Remove large checkpoint files and update .gitignore - Fix GitHub push size limit issue

--- a/orpheus-voice-chat/.gitignore
+++ b/orpheus-voice-chat/.gitignore
@@ -52,6 +52,12 @@ logs/
 .cache/
 models/
 
+# Large model checkpoints (too big for GitHub)
+checkpoints/
+*.pth
+*.bin
+*.safetensors
+
 # Deployment
 .dockerignore
 docker-compose.override.yml
