🔧 Final GitHub push fix - Ignore orpheus-original and large files

--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,10 @@ Thumbs.db
 models/
 cache/
 .cache/
+
+# Large model files and original source directories
+orpheus-original/
+checkpoints/
+*.pth
+*.bin
+*.safetensors
