--- a/orpheus-voice-chat/requirements.txt
+++ b/orpheus-voice-chat/requirements.txt
@@ -1,23 +1,36 @@
-# Orpheus-TTS Voice Chat System Dependencies
+# REAL ORPHEUS-TTS VOICE CHAT SYSTEM
+# ====================================
+# Complete dependencies for authentic Orpheus-TTS with emotion support
 
 # Environment Management
 python-dotenv>=1.0.0
 
-# Core Dependencies
-google-generativeai>=0.3.2
-edge-tts>=6.1.9  
-speech-recognition>=3.10.0
-pygame>=2.5.0
-
-# Real Orpheus-TTS (Official Package)
+# Real Orpheus-TTS (Official Implementation)
 orpheus-speech>=0.1.0
+vllm>=0.7.3
+transformers>=4.30.0
+torch>=2.0.0
+torchaudio>=2.0.0
+accelerate>=0.20.0
 
-# Audio Processing
+# AI Integration
+google-generativeai>=0.3.2
+
+# Audio Processing & Playback
+pygame>=2.5.0
 soundfile>=0.12.1
 numpy>=1.21.0
 
+# Speech Recognition
+speech-recognition>=3.10.0
+
 # Optional: Enhanced Audio Support
 pyaudio>=0.2.11
+edge-tts>=6.1.9
+
+# Core Python Libraries
+requests>=2.31.0
+asyncio-compat>=0.1.0
 
 # Development & Testing
-requests>=2.31.0
+pytest>=7.0.0
