Remove deprecated demo scripts and implement secure Orpheus project with Microsoft Edge TTS. Enhance security measures by removing hardcoded tokens, implementing automated security audits, and ensuring environment variables are properly configured. Add new main working file for real Orpheus functionality with emotion processing and interactive voice chat capabilities. Update project status documentation to reflect security and functionality improvements.

--- a/orpheus-voice-chat/.gitignore
+++ b/orpheus-voice-chat/.gitignore
@@ -84,3 +84,26 @@ config.json
 secrets.json
 api_keys.txt
 *.key
+
+# SECURITY: Files that might contain hardcoded tokens
+*_token.py
+*_key.py
+*_secret.py
+api_keys.py
+tokens.py
+secrets.py
+quick_test.py
+test_access.py
+accept_model_terms.py
+
+# SECURITY: Test files with hardcoded values
+test_tokens.py
+demo_with_keys.py
+quick_auth_test.py
+token_test.py
+
+# SECURITY: Backup files that might contain secrets
+*.bak
+*.backup
+backup_*
+*_backup.*
