Cleanup: Remove unwanted files and scripts to enhance security and maintain repository integrity
- Deleted setup_openvoice.py, start.bat, start_minimal.bat, start_orpheus_enhanced.bat, start_real_ai.bat scripts
- Removed test scripts: test_orpheus.py, test_api.py, test_quick.py, test_system.py
- Introduced security_audit.py to scan for hardcoded tokens and prevent security leaks
- Added prevent_file_spawning.py to monitor and remove unwanted files
- Created interactive_orpheus.py for a simple interactive chat interface
- Documented repository cleanup in REPOSITORY_CLEANED.md

--- a/orpheus-voice-chat/.gitignore
+++ b/orpheus-voice-chat/.gitignore
@@ -101,6 +101,71 @@ test_tokens.py
 demo_with_keys.py
 quick_auth_test.py
 token_test.py
+debug_*.py
+test_security.py
+
+# PREVENT UNWANTED FILE SPAWNING
+cpu_demo.py
+cpu_orpheus_demo.py
+emotion_demo.py
+emotion_voice_chat.py
+enhanced_voice_chat.py
+final_demo.py
+orpheus_demo_simple.py
+orpheus_only_demo.py
+simple_test.py
+simple_working_demo.py
+streamlined_demo.py
+working_demo.py
+actual_orpheus_tts.py
+intel_optimized_tts.py
+intel_tts_fixed.py
+orpheus_tts_real.py
+orpheus_voice_chat_working.py
+real_orpheus_intel.py
+real_orpheus_tts.py
+real_orpheus_voice.py
+real_orpheus_voice_chat.py
+working_orpheus_tts.py
+authentic_orpheus_direct.py
+check_orpheus_access.py
+find_real_orpheus.py
+orpheus_tts_direct.py
+pure_orpheus_only.py
+real_orpheus_original.py
+real_orpheus_voices.py
+working_orpheus_final.py
+complete_verification.py
+fixed_voice_chat.py
+install_orpheus.py
+official_orpheus_tts.py
+setup_orpheus_auth.py
+test_orpheus.py
+app.py
+Dockerfile
+.gcloudignore
+
+# UNWANTED DOCUMENTATION FILES
+CPU_MODE_WORKING.md
+CRITICAL_FIXES_APPLIED.md
+CURRENT_STATUS_RESOLVED.md
+FINAL_SECURITY_STATUS.md
+HUGGINGFACE_SETUP.md
+NEXT_STEPS.md
+REAL_ORPHEUS_README.md
+REAL_ORPHEUS_STATUS.md
+SECURE_PROJECT_STATUS.md
+SECURITY_CLEANUP_COMPLETE.md
+SECURITY_MISSION_COMPLETE.md
+SECURITY_SETUP.md
+SYSTEM_READY.md
+
+# UNWANTED DIRECTORIES
+scripts/
+docs/
+deploy/
+tests/
+checkpoints/
 
 # SECURITY: Backup files that might contain secrets
 *.bak
